alignment fixes

--- a/public/css/front/app.css
+++ b/public/css/front/app.css
@@ -14082,6 +14082,7 @@ input[type=number]::-webkit-outer-spin-button {
   margin-left: 3px;
   position: relative;
   border: 1px solid #E0E0E0;
+  background-position: 50%;
 }
 
 .user-img.no-image {
