--- a/resources/assets/sass/front/styles/nav.scss
+++ b/resources/assets/sass/front/styles/nav.scss
@@ -294,6 +294,7 @@ $nav-font:$font-bold;
     margin-left: 3px;
     position: relative;
     border: 1px solid #E0E0E0;
+    background-position: 50%;
     &.no-image{
         position: relative;
         &:after{
